[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/ui/ToolTip.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/ui_sheet.png" type="Texture" id=2]
[ext_resource path="res://resources/default_font.tres" type="DynamicFont" id=3]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 432, 272, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 96, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 96, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 408, 288, 8, 8 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 416, 272, 8, 8 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 320, 272, 64, 80 )

[node name="ToolTip" type="Node2D"]
z_index = 10
script = ExtResource( 1 )
unknown = SubResource( 2 )
lethality = SubResource( 3 )
endurance = SubResource( 4 )
charm = SubResource( 5 )
speed = SubResource( 6 )
tick = SubResource( 7 )
neg_tick = SubResource( 8 )

[node name="Background" type="TextureRect" parent="."]
margin_top = -64.0
margin_right = 64.0
mouse_filter = 2
texture = SubResource( 1 )
stretch_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
anchor_left = 0.078125
anchor_top = 0.0625
anchor_right = 1.07813
anchor_bottom = 1.0625
margin_top = 14.0
margin_bottom = 14.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
custom_constants/separation = 0

[node name="PartIcons" type="VBoxContainer" parent="Background/HBoxContainer"]
margin_right = 16.0
margin_bottom = 80.0
rect_min_size = Vector2( 16, 64 )
mouse_filter = 2

[node name="Icon1" type="TextureRect" parent="Background/HBoxContainer/PartIcons"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
mouse_filter = 2
stretch_mode = 3

[node name="Icon2" type="TextureRect" parent="Background/HBoxContainer/PartIcons"]
margin_top = 20.0
margin_right = 16.0
margin_bottom = 36.0
rect_min_size = Vector2( 16, 16 )
mouse_filter = 2
stretch_mode = 3

[node name="Icon3" type="TextureRect" parent="Background/HBoxContainer/PartIcons"]
margin_top = 40.0
margin_right = 16.0
margin_bottom = 56.0
rect_min_size = Vector2( 16, 16 )
mouse_filter = 2
stretch_mode = 3

[node name="Stats" type="VBoxContainer" parent="Background/HBoxContainer"]
margin_left = 16.0
margin_right = 64.0
margin_bottom = 80.0
rect_min_size = Vector2( 48, 64 )
mouse_filter = 2

[node name="Stat1" type="GridContainer" parent="Background/HBoxContainer/Stats"]
margin_right = 48.0
margin_bottom = 16.0
rect_min_size = Vector2( 48, 16 )
mouse_filter = 2
custom_constants/vseparation = 0
columns = 3

[node name="Icon1" type="TextureRect" parent="Background/HBoxContainer/Stats/Stat1"]
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
stretch_mode = 3

[node name="Icon2" type="TextureRect" parent="Background/HBoxContainer/Stats/Stat1"]
margin_left = 12.0
margin_right = 20.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
stretch_mode = 3

[node name="Icon3" type="TextureRect" parent="Background/HBoxContainer/Stats/Stat1"]
margin_left = 24.0
margin_right = 32.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
stretch_mode = 3

[node name="Icon4" type="TextureRect" parent="Background/HBoxContainer/Stats/Stat1"]
margin_top = 8.0
margin_right = 8.0
margin_bottom = 16.0
rect_min_size = Vector2( 8, 8 )
stretch_mode = 3

[node name="Icon5" type="TextureRect" parent="Background/HBoxContainer/Stats/Stat1"]
margin_left = 12.0
margin_top = 8.0
margin_right = 20.0
margin_bottom = 16.0
rect_min_size = Vector2( 8, 8 )
stretch_mode = 3

[node name="Icon6" type="TextureRect" parent="Background/HBoxContainer/Stats/Stat1"]
margin_left = 24.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = 16.0
rect_min_size = Vector2( 8, 8 )
stretch_mode = 3

[node name="Stat2" type="GridContainer" parent="Background/HBoxContainer/Stats"]
margin_top = 20.0
margin_right = 48.0
margin_bottom = 36.0
rect_min_size = Vector2( 48, 16 )
mouse_filter = 2
custom_constants/vseparation = 0
columns = 3

[node name="Icon1" type="TextureRect" parent="Background/HBoxContainer/Stats/Stat2"]
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
stretch_mode = 3

[node name="Icon2" type="TextureRect" parent="Background/HBoxContainer/Stats/Stat2"]
margin_left = 12.0
margin_right = 20.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
stretch_mode = 3

[node name="Icon3" type="TextureRect" parent="Background/HBoxContainer/Stats/Stat2"]
margin_left = 24.0
margin_right = 32.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
stretch_mode = 3

[node name="Icon4" type="TextureRect" parent="Background/HBoxContainer/Stats/Stat2"]
margin_top = 8.0
margin_right = 8.0
margin_bottom = 16.0
rect_min_size = Vector2( 8, 8 )
stretch_mode = 3

[node name="Icon5" type="TextureRect" parent="Background/HBoxContainer/Stats/Stat2"]
margin_left = 12.0
margin_top = 8.0
margin_right = 20.0
margin_bottom = 16.0
rect_min_size = Vector2( 8, 8 )
stretch_mode = 3

[node name="Icon6" type="TextureRect" parent="Background/HBoxContainer/Stats/Stat2"]
margin_left = 24.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = 16.0
rect_min_size = Vector2( 8, 8 )
stretch_mode = 3

[node name="Stat3" type="GridContainer" parent="Background/HBoxContainer/Stats"]
margin_top = 40.0
margin_right = 48.0
margin_bottom = 56.0
rect_min_size = Vector2( 48, 16 )
mouse_filter = 2
custom_constants/vseparation = 0
columns = 3

[node name="Icon1" type="TextureRect" parent="Background/HBoxContainer/Stats/Stat3"]
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
stretch_mode = 3

[node name="Icon2" type="TextureRect" parent="Background/HBoxContainer/Stats/Stat3"]
margin_left = 12.0
margin_right = 20.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
stretch_mode = 3

[node name="Icon3" type="TextureRect" parent="Background/HBoxContainer/Stats/Stat3"]
margin_left = 24.0
margin_right = 32.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
stretch_mode = 3

[node name="Icon4" type="TextureRect" parent="Background/HBoxContainer/Stats/Stat3"]
margin_top = 8.0
margin_right = 8.0
margin_bottom = 16.0
rect_min_size = Vector2( 8, 8 )
stretch_mode = 3

[node name="Icon5" type="TextureRect" parent="Background/HBoxContainer/Stats/Stat3"]
margin_left = 12.0
margin_top = 8.0
margin_right = 20.0
margin_bottom = 16.0
rect_min_size = Vector2( 8, 8 )
stretch_mode = 3

[node name="Icon6" type="TextureRect" parent="Background/HBoxContainer/Stats/Stat3"]
margin_left = 24.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = 16.0
rect_min_size = Vector2( 8, 8 )
stretch_mode = 3

[node name="PartTypeLabel" type="Label" parent="Background"]
margin_left = 5.0
margin_top = 5.0
margin_right = 59.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.168627, 0.105882, 0.117647, 1 )
custom_fonts/font = ExtResource( 3 )
align = 1
